--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 
 # ????????? ??????????? ? ???? ?????? PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=admin
-spring.datasource.password=123
+spring.datasource.username=postgres
+spring.datasource.password=33386
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
