--- a/inquiry-service-app/src/test/resources/application.properties
+++ b/inquiry-service-app/src/test/resources/application.properties
@@ -1,5 +1,9 @@
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL;DATABASE_TO_LOWER=TRUE;DEFAULT_NULL_ORDERING=HIGH
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#Liquibase
+spring.liquibase.change-log=classpath:/db/changelog/main-changelog.xml
+spring.liquibase.enabled=true
