--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.hibernate.ddl-auto=none
 #Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/main-changelog.xml
 spring.liquibase.enabled=true
+
+app.version=@project.version@
