--- a/inquiry-service-app/src/test/resources/application.properties
+++ b/inquiry-service-app/src/test/resources/application.properties
@@ -7,3 +7,6 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #Liquibase
 spring.liquibase.change-log=classpath:/db/changelog/main-changelog.xml
 spring.liquibase.enabled=true
+
+app.version=@project.version@
+
