fixed setup for checkstyle inquiry-service

--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -19,7 +21,8 @@
 
 	<properties>
 		<java.version>21</java.version>
-		<config_loc>config/checkstyle</config_loc>
+		<checkstyle.dir>${basedir}/checkstyle</checkstyle.dir>
+		<config_loc>config</config_loc>
 	</properties>
 
 	<build>
@@ -87,12 +90,15 @@
 					<configuration>
 						<sourceDirectories>
 							<sourceDirectory>${project.build.sourceDirectory}</sourceDirectory>
+							<sourceDirectory>${project.build.testSourceDirectory}</sourceDirectory>
 						</sourceDirectories>
-						<configLocation>config/checkstyle/checkstyle.xml</configLocation>
-						<propertyExpansion>config_loc=${config_loc}</propertyExpansion>
+						<configLocation>${checkstyle.dir}/checkstyle.xml</configLocation>
+						<propertyExpansion>config_loc=${checkstyle.dir}/${config_loc}</propertyExpansion>
 					</configuration>
 					<executions>
 						<execution>
+							<id>validate</id>
+							<phase>validate</phase>
 							<goals>
 								<goal>check</goal>
 							</goals>
