--- a/inquiry-service-app/src/main/test/resources/application.properties
+++ b/inquiry-service-app/src/main/test/resources/application.properties
@@ -4,6 +4,20 @@ spring.datasource.username=postgres
 spring.datasource.password=33386
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.liquibase.change-log=db.changelog/test-main-changelog.xml
+
+#Jpa
+spring.jpa.open-in-view=false
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+
+
+#Batch mode https://www.baeldung.com/jpa-hibernate-batch-insert-update
+spring.jpa.properties.hibernate.jdbc.batch_size=20
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.batch_versioned_data=true
+
+spring.liquibase.change-log=classpath:/db/changelog/main-changelog.xml
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+
 
 app.version=@project.version@
