--- a/inquiry-service-app/src/main/resources/application.properties
+++ b/inquiry-service-app/src/main/resources/application.properties
@@ -14,4 +14,11 @@ spring.jpa.hibernate.ddl-auto=none
 spring.liquibase.change-log=classpath:/db/changelog/main-changelog.xml
 spring.liquibase.enabled=true
 
+#Actuator Swagger
+springdoc.api-docs.path=/api
+springdoc.show-actuator=true
+springdoc.api-docs.groups.enabled=true
+management.endpoints.web.exposure.include=*
+management.server.port=9090
+
 app.version=@project.version@
