--- a/inquiry-service-app/src/main/resources/application.properties
+++ b/inquiry-service-app/src/main/resources/application.properties
@@ -32,3 +32,7 @@ management.health.custom.enabled = "true"
 management.endpoint.health.group.first_group.include = ping, diskSpace
 management.metrics.export.prometheus.enabled=true
 management.endpoint.health.group.monitor.include = db
+
+#Bot config
+bot.name=InquiryTelegramBot
+bot.token=6729436731:AAHyKpfeaOoZ8zGzk4THp-PuWOBousICKM4
