--- a/inquiry-service-app/src/test/resources/application.properties
+++ b/inquiry-service-app/src/test/resources/application.properties
@@ -21,3 +21,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 
 app.version=@project.version@
+
+#Bot config
+bot.name=InquiryTelegramBot
+bot.token=6729436731:AAHyKpfeaOoZ8zGzk4THp-PuWOBousICKM4
