Refactor docker-compose file for all services and improve Environment variables #67

--- a/inquiry-service-app/src/main/resources/liquibase.properties
+++ b/inquiry-service-app/src/main/resources/liquibase.properties
@@ -1,5 +1,5 @@
-url=jdbc:postgresql://localhost:5432/Inquiry-service
-username=postgres
-password=33386
-
+url=${DATABASE_URL}
+username=${DATABASE_USERNAME}
+password=${DATABASE_PASSWORD}
+driver=org.postgresql.Driver
 changeLogFile=db/changelog/main-changelog.xml
