--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,127 @@
 version: '3.8'
+
+networks:
+  microservices-network:
+    driver: bridge
+
 services:
-  database:
-    container_name: postgres_sql
+  # Postgres database for customer-service
+  postgres-customer-db:
+    container_name: inq_postgres_customer
     image: postgres:latest
-    volumes:
-      - db:/var/lib/postgresql/data
+    restart: always
+    env_file:
+      - ./secrets/customer-db.env
     ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
-      POSTGRES_DB:       "inquiry-service"
+      - 5432:5432
+    volumes:
+      - ./database-data/customers:/var/lib/postgresql/data
     networks:
-      - backend
+      - microservices-network
+
+  # Postgres database for product-service
+  postgres-product-db:
+    container_name: inq_postgres_product
+    image: postgres:latest
+    restart: always
+    env_file:
+      - ./secrets/product-db.env
+    expose:
+      - 5433
+    ports:
+      - 5433:5432
+    command:
+      -p 5433
+    volumes:
+      - ./database-data/products:/var/lib/postgresql/data
+    networks:
+      - microservices-network
+
+  # Postgres database for inquiry-service
+  postgres-inquiry-db:
+    container_name: inq_postgres_inquiry
+    image: postgres:latest
+    restart: always
+    env_file:
+      - ./secrets/inquiry-db.env
+    expose:
+      - 5434
+    ports:
+      - 5434:5432
+    command:
+      -p 5434
+    volumes:
+      - ./database-data/inquiries:/var/lib/postgresql/data
+    networks:
+      - microservices-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
       interval: 10s
       timeout: 5s
       retries: 5
-  inquiry-service:
-    container_name: inquiry_service
-    image: iprody-devs-gr0000000008-inquiry-service:latest
-    networks:
-      - backend
+
+  pgAdmin:
+    container_name: inq_pg_admin4
+    image: dpage/pgadmin4
     restart: always
-    ports:
-      - "8787:8787"
-    environment:
-      - SERVER_PORT=8787
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://database/inquiry-service
-  pgadmin:
-    container_name: pg_admin4
-    image: dpage/pgadmin4:7
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
+    env_file:
+      - ./secrets/pgadmin4.env
     volumes:
-      - pgadmin:/var/lib/pgadmin
+      - pgAdmin:/var/lib/pgadmin
     ports:
-      - "8888:80"
+      - 8888:80
+    depends_on:
+      - postgres-customer-db
+      - postgres-product-db
+      - postgres-inquiry-db
     networks:
-      - backend
+      - microservices-network
+
+  #customer service application
+  customer-service:
+    image: customer:latest
+    container_name: inq-customer-service
+    env_file:
+      - ./secrets/customer-service.env
     restart: always
+    ports:
+      - 8082:8080
+    networks:
+      - microservices-network
+    depends_on:
+      - postgres-customer-db
+      - pgAdmin
+
+  #  product service application
+  product-service:
+    image: product:latest
+    container_name: inq-product-service
+    networks:
+      - microservices-network
+    ports:
+      - 8083:8787
+    env_file:
+      - ./secrets/product-service.env
+    restart: always
+    depends_on:
+      - postgres-product-db
+      - pgAdmin
+
+  #  inquiry service application
+  inquiry-service:
+    image: inquiry:latest
+    container_name: inq-inquiry-service
+    networks:
+      - microservices-network
+    ports:
+      - 8084:8787
+    env_file:
+      - ./secrets/inquiry-service.env
+    restart: always
+    depends_on:
+      - postgres-inquiry-db
+      - pgAdmin
+
 volumes:
-  db:
-  pgadmin:
-networks:
-  backend:
-    driver: bridge
-    
+  database-data:
+  pgAdmin:
