--- a/inquiry-service-app/src/main/resources/application.properties
+++ b/inquiry-service-app/src/main/resources/application.properties
@@ -22,3 +22,6 @@ management.endpoints.web.exposure.include=*
 management.server.port=9090
 
 app.version=@project.version@
+
+#color stacktrace
+spring.output.ansi.enabled=ALWAYS
