--- a/.github/workflows/push_to_registry.yml
+++ b/.github/workflows/push_to_registry.yml
@@ -13,12 +13,10 @@ on:
     branches:
       - master
       - main
-
 env:
   REGISTRY: ghcr.io
   NAME_IMAGE: iprody/iprody-devs-gr0000000008-inquiry-service
-  JAR_FILE: inquiry-service-0.0.1-SNAPSHOT.jar
-
+  JAR_FILE: inquiry-service-app-0.0.1-SNAPSHOT.jar
 jobs:
   push_to_github_registry:
     runs-on: ubuntu-latest
@@ -51,7 +49,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: ./inquiry-service-app
+          context: ./inquiry-service-app/
           file: ./inquiry-service-app/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
@@ -62,6 +60,6 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: inquiry-service-archive
-          path:
+          path: |
             ./inquiry-service-app/target
             !./inquiry-service-app/target/**/*.md
