monitoring (prometheus, grafana) for inquiry-service

--- a/inquiry-service-app/src/main/resources/application.properties
+++ b/inquiry-service-app/src/main/resources/application.properties
@@ -18,10 +18,17 @@ spring.liquibase.enabled=true
 springdoc.api-docs.path=/api
 springdoc.show-actuator=true
 springdoc.api-docs.groups.enabled=true
-management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.include=health, info, prometheus, liquibase
 management.server.port=9090
 
 app.version=@project.version@
 
 #color stacktrace
 spring.output.ansi.enabled=ALWAYS
+
+#Actuator health
+management.endpoint.health.show-details = "always"
+management.health.custom.enabled = "true"
+management.endpoint.health.group.first_group.include = ping, diskSpace
+management.metrics.export.prometheus.enabled=true
+management.endpoint.health.group.monitor.include = db
