--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,14 @@
 		<config_loc>config</config_loc>
 	</properties>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub OWNER Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/iPrody/iPrody-Devs-Gr0000000008-product-service</url>
+		</repository>
+	</distributionManagement>
+
 	<build>
 		<pluginManagement>
 			<plugins>
