#58 created dto module

--- a/inquiry-service-app/pom.xml
+++ b/inquiry-service-app/pom.xml
@@ -73,6 +73,11 @@
 			<artifactId>mapstruct</artifactId>
 			<version>1.5.5.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>com.iprodi08</groupId>
+			<artifactId>inquiry-service-dto</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
