--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,7 @@
 	<modules>
 		<module>inquiry-service-app</module>
 		<module>e2e</module>
-	</modules>
+        <module>inquiry-service-dto</module>
+    </modules>
 
 </project>
