Add maven settings

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ jobs:
   test_job:
     runs-on: ubuntu-latest
     name: Run tests
+    permissions:
+      contents: read
+      packages: read
     steps:
       - uses: actions/checkout@v4
       - name: Set up JDK 21
@@ -15,7 +18,11 @@ jobs:
           distribution: 'temurin'
           cache: maven
       - name: Run test with Maven
-        run: mvn test
+        run: mvn -P github --settings ./.github/workflows/maven-settings.xml -B test
+        env:
+          USER_NAME: ${{ github.actor }}
+          ACCESS_TOKEN: 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
+
   checkstyle_job:
     runs-on: ubuntu-latest
     needs: [test_job]
