monitoring ssl for inquiry-service #49

--- a/Docker/monitoring.yml
+++ b/Docker/monitoring.yml
@@ -35,6 +35,19 @@ services:
     depends_on:
       - prometheus
 
+  blackbox_exporter:
+    image: prom/blackbox-exporter:latest
+    container_name: blackbox_exporter
+    restart: unless-stopped
+    ports:
+      - 9115:9115
+    volumes:
+      - ./monitoring/config/blackbox.yml:/etc/blackbox_exporter/config.yml:ro
+    networks:
+      - microservices-network
+    depends_on:
+      - prometheus
+
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
     container_name: cadvisor
