--- a/Docker/gateway/nginx.conf
+++ b/Docker/gateway/nginx.conf
@@ -17,15 +17,13 @@ http {
     server {
         listen 80;
         server_name localhost;
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
+        return 301 https://$host$request_uri;
     }
 
     server {
         listen       443 ssl;
         server_name  localhost;
+        root /usr/share/nginx/html;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate /etc/nginx/ssl/iprody.crt;
@@ -36,7 +34,7 @@ http {
 
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-        location /customers {
+        location /api/customers {
             proxy_pass http://customer_service/api/customers;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -44,7 +42,7 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /products {
+        location /api/products {
             proxy_pass http://product_service/api/products;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -52,7 +50,15 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /inquiries {
+        location /api/products/info {
+            proxy_pass http://product_service/api/info;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/v1/inquiries {
             proxy_pass http://inquiry_service/api/v1/inquiries;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -60,12 +66,13 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /sources {
+        location /api/v1/sources {
             proxy_pass http://inquiry_service/api/v1/sources;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
+
     }
 }
