added location to swagger-ui in inquiry-service

--- a/inquiry-service-app/src/main/resources/application.properties
+++ b/inquiry-service-app/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.liquibase.enabled=true
 
 #Actuator Swagger
 springdoc.api-docs.path=/api
+springdoc.swagger-ui.path=/swagger-ui
 springdoc.show-actuator=true
 springdoc.api-docs.groups.enabled=true
 management.endpoints.web.exposure.include=health, info, prometheus, liquibase
