--- a/Docker/gateway/nginx.conf
+++ b/Docker/gateway/nginx.conf
@@ -34,24 +34,48 @@ http {
 
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-        location /api/customers {
-            proxy_pass http://customer_service/api/customers;
+        location /swagger-ui {
+            proxy_pass http://inquiry_service/swagger-ui;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            }
+
+        location /api {
+            proxy_pass http://inquiry_service/api;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/products {
-            proxy_pass http://product_service/api/products;
+        location /api/v1/customers {
+            proxy_pass http://customer_service/api/v1/customers;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        location /api/products/info {
-            proxy_pass http://product_service/api/info;
+        location /api/v1/countries {
+            proxy_pass http://customer_service/api/v1/countries;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/v1/products {
+            proxy_pass http://product_service/api/v1/products;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /api/v1/products/info {
+            proxy_pass http://product_service/api/v1/info;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
