added zipkin for tracing

--- a/Docker/monitoring.yml
+++ b/Docker/monitoring.yml
@@ -61,6 +61,14 @@ services:
     networks:
       - microservices-network
 
+  zipkin:
+    image: openzipkin/zipkin:latest
+    container_name: zipkin
+    ports:
+      - 9411:9411
+    networks:
+      - microservices-network
+
 volumes:
   prom-data:
   grafana-data:
