--- a/inquiry-service-app/src/main/resources/application.properties
+++ b/inquiry-service-app/src/main/resources/application.properties
@@ -36,3 +36,15 @@ management.endpoint.health.group.monitor.include = db
 #Bot config
 bot.name=InquiryTelegramBot
 bot.token=6729436731:AAHyKpfeaOoZ8zGzk4THp-PuWOBousICKM4
+
+# tracing
+management.tracing.enabled=true
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=${ZIPKIN_TRACING_ENDPOINT}
+logging.pattern.level="trace-id=%mdc{traceId} span-id=%mdc{spanId} %d{HH:mm:ss.SSS} [%thread] [%-5level] [%logger{36}] -%kvp- %msg%n"
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%highlight(%5p){faint,default,yellow,red}] %clr(%-40.40logger){blue} - %clr(%m){yellow}%n
+
+# Logger configuration
+logger.org.springframework.web=INFO
+logger.org.postgresql=INFO
+logger.com.iprody08.inquiryservice=INFO
