--- a/inquiry-service-app/src/main/resources/application.properties
+++ b/inquiry-service-app/src/main/resources/application.properties
@@ -15,8 +15,8 @@ spring.liquibase.change-log=classpath:/db/changelog/main-changelog.xml
 spring.liquibase.enabled=true
 
 #Actuator Swagger
-springdoc.api-docs.path=/api
-springdoc.swagger-ui.path=/swagger-ui
+springdoc.api-docs.path=/inquiry/api
+springdoc.swagger-ui.path=/inquiry/swagger-ui
 springdoc.show-actuator=true
 springdoc.api-docs.groups.enabled=true
 management.endpoints.web.exposure.include=health, info, prometheus, liquibase
