--- a/Docker/gateway/nginx.conf
+++ b/Docker/gateway/nginx.conf
@@ -34,16 +34,48 @@ http {
 
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-        location /swagger-ui {
-            proxy_pass http://inquiry_service/swagger-ui;
+        location /customer/swagger-ui {
+            proxy_pass http://customer_service/customer/swagger-ui;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /customer/api {
+            proxy_pass http://customer_service/customer/api;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /products/swagger-ui {
+            proxy_pass http://product_service/products/swagger-ui;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /products/api {
+            proxy_pass http://product_service/products/api;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location /inquiry/swagger-ui {
+            proxy_pass http://inquiry_service/inquiry/swagger-ui;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             }
 
-        location /api {
-            proxy_pass http://inquiry_service/api;
+        location /inquiry/api {
+            proxy_pass http://inquiry_service/inquiry/api;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
